# skeletonpy

./: .editorconfig  .gitlab-ci.yml  Dockerfile.golang  Dockerfile.python  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  init.sh  kind.yaml  pyproject.toml  skaffold.app.yaml  skaffold.dapr.yaml
.devcontainer/: Makefile
api/greeter/v1/: greeter.proto
manifests/base/: api-gateway.yaml  svc-greeter.yaml
manifests/overlays/production/: lb.yaml
microservices/api/gateway/: Makefile  main.go
microservices/svc/greeter/: Makefile  conf.py  run.py
microservices/svc/greeter/handler/: __init__.py  greeter.py
microservices/svc/greeter/server/: __init__.py
